syntax = "proto3";
package dclauth.types;

import "dclauth/types/account.proto";
import "dclauth/types/pending_account.proto";
import "dclauth/types/pending_account_revocation.proto";
import "dclauth/types/account_stat.proto";
import "dclauth/types/revoked_account.proto";
import "dclauth/types/rejected_account.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclauth/types";

// GenesisState defines the dclauth module's genesis state.
message GenesisState {
    repeated Account accountList = 1 [(gogoproto.nullable) = false];
  repeated PendingAccount pendingAccountList = 2 [(gogoproto.nullable) = false];
  repeated PendingAccountRevocation pendingAccountRevocationList = 3 [(gogoproto.nullable) = false];
  AccountStat accountStat = 4;
  repeated RevokedAccount revokedAccountList = 5 [(gogoproto.nullable) = false];
  repeated RejectedAccount rejectedAccountList = 6 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
