syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.dclgenutil;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclgenutil/types";

import "gogoproto/gogo.proto";


// GenesisState defines the dclgenutil module's genesis state.
message GenesisState {
  // gen_txs defines the genesis transactions.
  repeated bytes gen_txs = 1 [(gogoproto.casttype) = "encoding/json.RawMessage", (gogoproto.jsontag) = "gentxs"];


    // this line is used by starport scaffolding # genesis/proto/state
}
